--- a/module_sample/views/menu.xml
+++ b/module_sample/views/menu.xml
@@ -13,4 +13,16 @@
 		parent='sample.menu_for_sampleeee_module'
 		sequence="1" />
 		
+	<menuitem id="menu_for_model_one_lines"
+		name="Model Lines"
+		action="action_for_model_one_lines"
+		parent='menu_for_sampleeee_module'
+		sequence="2" />
+		
+	<menuitem id="menu_for_sample_wizard"
+		name="My Wizard"
+		action="action_for_sample_wizard"
+		parent='menu_for_sampleeee_module'
+		sequence="3" />
+		
 </odoo>
