--- a/module_sample/views/model_one_view.xml
+++ b/module_sample/views/model_one_view.xml
@@ -1,3 +1,4 @@
+
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 	<data>
@@ -7,18 +8,45 @@
 			<field name="model">model.one</field>
 			<field name="arch" type="xml">
 				<form string='Model One'>
+					<header>
+						<button name="show_wizard" string="Show Wizard" type="object" class="btn-secondary" />
+						<button name="%(module_sample.action_for_sample_wizard)d" string="Wizard Action Button" type="action" class="oe_highlight" />
+						<button name="%(sale.action_quotations_with_onboarding)d" string="Sale Order" type="action" class="oe_highlight" />
+						<button name="write_values" string="Write Values" type="object" class="btn-primary" />
+					</header>
 					<sheet>
 						<group>
 						<group>
-							<field name="name" string="Name" />
-							<field name="age"  />
+							<field name="seq" readonly="1" />
+							<field name="name" string="Display Name" />
+							<field name="age" readonly="1"  />
 							<field name="description" />
+							<field name="product_ids" widget="many2many_tags" />	
+							<field name="sale_ids" widget="many2many_tags" />	
+							<field name="sale_id" domain="[('state', '=', 'sale'),('user_id', '=', 2)]" />
 						</group>
 						<group>
 							<field name="gender" />
-							<field name="active" />		
+							<field name="is_special" />	
+							<field name="active" />	
+							<field name="date" />	
+							<field name="create_uid" />	
+							<field name="partner_ids" widget="many2many_tags"  />	
+							<field name="partner_count" />	
 						</group>
 					</group>
+					<notebook>
+						<page string="Model One Lines">
+							<field name="model_one_line_ids" >
+								<list editable="bottom">
+									<field name="id" />
+									<field name="name" />
+									<field name="product_id"  />
+									<field name="price"  />
+								</list>
+							</field>
+						</page>
+					</notebook>
 					</sheet>
 				</form>
 			</field>
@@ -30,11 +58,16 @@
 			<field name="model">model.one</field>
 			<field name="arch" type="xml">
 				<list string='Model One'>
+					<field name="seq" />
 					<field name="name" string="Name" />
 					<field name="age"  />
 					<field name="description" />
 					<field name="gender" />
 					<field name="active" />	
+					<field name="sale_id" />
+					<field name="date" />
+					<field name="create_uid" />		
+					<field name="partner_ids"  widget="many2many_tags" />	
 				</list>
 			</field>
 		</record>
@@ -96,13 +129,38 @@
 			</field>
 		</record>
 		
+		<!--graph View-->
+		<record id="view_graph_model_one" model="ir.ui.view">
+			<field name="name">model.one.graph</field>
+			<field name="model">model.one</field>
+			<field name="arch" type="xml">
+				<graph string='Model One'>
+					<field name="name" type="row" />
+					<field name="age" type="measure" />
+				</graph>
+			</field>
+		</record>
+		
+		<!--Calendar View-->
+		<record id="view_calendar_model_one" model="ir.ui.view">
+			<field name="name">model.one.calendar</field>
+			<field name="model">model.one</field>
+			<field name="arch" type="xml">
+				<calendar string='Model One' date_start="date" color="name" mode="year">
+					<field name="name" />
+					<field name="age" />
+				</calendar>
+			</field>
+		</record>
+		
 		<!--action-->
 		<record id="action_for_model_one" model="ir.actions.act_window">
 			<field name="name"> Model One</field>
 			<field name="type">ir.actions.act_window</field>
 			<field name="res_model">model.one</field>
-			<field name="view_mode">list,form,kanban,search,pivot</field>
-			<field name="context">{}</field>
+			<field name="view_mode">list,form,kanban,search,pivot,graph,calendar</field>
+			<field name="context">{'default_name': 'Dea', 'default_gender' : 'female'}</field>
+			<field name="domain">[('gender', '=', 'female')]</field>
 			<field name="help" type="html">
 				<p>Model one for has no data</p>
 			</field>
