--- a/module_sample/views/model_one_view.xml
+++ b/module_sample/views/model_one_view.xml
@@ -167,5 +167,13 @@
 			</field>
 		</record>
 
+		<record id="action_increase_age_model_one" model="ir.actions.server">
+			<field name="name">Change Description</field>
+			<field name="model_id" ref="module_sample.model_model_one" />
+			<field name="binding_model_id" ref="module_sample.model_model_one" />
+			<field name="state">code</field>
+			<field name="code">action = records.change_description()</field>
+		</record>
+		
 	</data>
 </odoo>
