--- a/module_sample/views/menu.xml
+++ b/module_sample/views/menu.xml
@@ -24,5 +24,12 @@
 		action="action_for_sample_wizard"
 		parent='menu_for_sampleeee_module'
 		sequence="3" />
+
+	<menuitem id="menu_for_my_employee"
+		name="Employee"
+		action="action_for_my_employee"
+		parent='sample.menu_for_sampleeee_module'
+		sequence="4" />
+		
 		
 </odoo>
